policies for all options

--- a/core/compliance_policies/ott_middle_east.json
+++ b/core/compliance_policies/ott_middle_east.json
@@ -16,12 +16,12 @@
             "description": "Family content adhering to Islamic and traditional values",
             "prohibited": [
                 "ANY violence including cartoon violence",
-                "ALL alcohol references - even in background",
-                "ALL tobacco and drug content",
-                "ANY profanity in any language",
-                "Physical affection beyond family hugs",
-                "Western dating concepts",
-                "Magic and sorcery",
+                "ALL alcohol references - even in background.",
+                "ALL tobacco and drug content.",
+                "ANY profanity in any language.",
+                "Physical affection beyond family hugs.",
+                "Western dating concepts.",
+                "Magic and sorcery.",
                 "LGBTQ+ themes or characters",
                 "Non-Islamic religious education",
                 "Criticism of Islam or prophets",
