--- a/core/compliance_policies/youtube_east_asia.json
+++ b/core/compliance_policies/youtube_east_asia.json
@@ -19,7 +19,7 @@
                 "ANY violence including cartoon violence",
                 "ALL tobacco and smoking depiction",
                 "ALL alcohol including wine with meals",
-                "ANY drug references",
+                "ANY drug references.",
                 "Scary or supernatural content",
                 "Death or dying themes",
                 "ANY profanity in any language",
