--- a/core/compliance_policies/youtube_middle_east.json
+++ b/core/compliance_policies/youtube_middle_east.json
@@ -20,7 +20,7 @@
                 "Immodest clothing (shorts above knee, sleeveless, swimwear)",
                 "Dogs as pets (culturally sensitive in some regions)",
                 "Music with inappropriate lyrics",
-                "Dance moves that are suggestive",
+                "Dance moves that are suggestive.",
                 "Magic or sorcery themes",
                 "LGBTQ+ content or references",
                 "Political content or criticism of governments",
