--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-# VidMod Backend Dependencies
-
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
@@ -17,3 +15,4 @@ google-cloud-storage>=2.14.0
 google-generativeai>=0.3.0
 audio-separator[cpu]>=0.17.0
 google-genai
+elevenlabs>=1.0.0
